fix - globo logo alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -164,12 +164,14 @@
 
 .sponsor-opala {
     width: 100%;
+    height: max-content;
     max-width: 400px;
     max-height: 400px;
 }
 
 .sponsor-prata {
     width: 100%;
+    height: max-content;
     max-width: 100px;
     max-height: 100px;
 }
